--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ jobs:
           command: |
             python3 -m venv venv
             source venv/bin/activate
-            pip install --upgrade pip pip-tools
+            pip install --upgrade pip pip-tools numpy
             pip-sync dev-requirements.txt requirements.txt
 
       - save_cache:
