--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
     - defaults
 dependencies:
     - python = 3.8.2
+    - numpy
     # pip dependencies have to be provided in `requirements.txt` syntax
     - pip:
         - -r dev-requirements.txt
