--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2.1
 executors:
   tester:
     docker:
-      - image: circleci/python:3.8
+      - image: circleci/python:3.8.2
   publisher:
     docker:
       - image: circleci/python:3.8
@@ -88,8 +88,7 @@ jobs:
           paths:
             - /home/circleci/conda/envs/
           key: >-
-            conda-dependencies-{{ checksum "environment.yml" }}
-              {{ checksum "requirements.txt" }}
+            conda-dependencies-{{ checksum "environment.yml" }} {{ checksum "requirements.txt" }}
 
       # Run tests! We use pytest's test-runner.
       - run:
