--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,7 @@ jobs:
             pytest -v --junitxml=test-reports/junit.xml \
             --ignore-glob=**/**/tests/ \
             --ignore=Met4FoF-SmartUpUnit/tools/hv_plotting_test.py \
+            --ignore=agentMET4FOF_ZeMA_emc/ \
             > test-reports/pytest.log
 
       # Store test results.
@@ -160,6 +161,7 @@ jobs:
             pytest -v --junitxml=test-reports/junit.xml \
             --ignore-glob=**/**/tests/ \
             --ignore=Met4FoF-SmartUpUnit/tools/hv_plotting_test.py \
+            --ignore=agentMET4FOF_ZeMA_emc/ \
             > test-reports/pytest.log
 
       # Store test results.
