--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@
 #
 #    pip-compile
 #
-agentmet4fof==0.1.8       # via -r agentMET4FOF_ZeMA_emc/requirements.in
+agentmet4fof==0.1.8       # via -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_ml/requirements.txt
 appdirs==1.4.4            # via virtualenv
-attrs==19.3.0             # via hypothesis, pytest
-backcall==0.1.0           # via -r PyDynamic/requirements/requirements-py37.txt, ipython
-bleach==3.1.5             # via readme-renderer
+astroid==2.4.2            # via pylint
+attrs==19.3.0             # via hypothesis, jsonschema, pytest
+backcall==0.1.0           # via ipython
+bleach==3.1.5             # via nbconvert, readme-renderer
 brotli==1.0.7             # via flask-compress
 certifi==2020.4.5.2       # via requests
 cffi==1.14.0              # via cryptography
@@ -18,98 +19,127 @@ click==7.1.2              # via click-log, flask, python-semantic-release
 cloudpickle==1.4.1        # via osbrain
 coverage==5.1             # via pytest-cov
 cryptography==2.9.2       # via secretstorage
-cycler==0.10.0            # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
+cycler==0.10.0            # via matplotlib
 dash-core-components==1.10.0  # via dash
-dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
+dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof
+dash-daq==0.5.0           # via -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
 dash-html-components==1.0.3  # via dash, dash-cytoscape
 dash-table==4.7.0         # via dash
-dash==1.12.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, dash-cytoscape
+dash==1.12.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof, dash-cytoscape, dash-daq
 dash_renderer==1.4.1      # via dash, dash-cytoscape
-decorator==4.4.1          # via -r PyDynamic/requirements/requirements-py37.txt, ipython, networkx, traitlets
-dill==0.3.1.1             # via osbrain
+decorator==4.4.1          # via ipython, networkx, traitlets
+defusedxml==0.6.0         # via nbconvert
+dill==0.3.2               # via multiprocess, osbrain
 distlib==0.3.0            # via virtualenv
 docutils==0.16            # via readme-renderer
+entrypoints==0.3          # via nbconvert
 filelock==3.0.12          # via tox, virtualenv
 flask-compress==1.5.0     # via dash
 flask==1.1.2              # via dash, flask-compress
 future==0.18.2            # via dash, torch
 gitdb==4.0.5              # via gitpython
 gitpython==3.1.3          # via python-semantic-release
-h5py==2.10.0              # via -r agentMET4FOF_ZeMA_emc/requirements.in
+h5py==2.10.0              # via -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in
 hypothesis==5.16.0        # via -r PyDynamic/requirements/dev-requirements.in
 idna==2.9                 # via requests
 invoke==1.4.1             # via python-semantic-release
-ipykernel==5.1.3          # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
-ipython-genutils==0.2.0   # via -r PyDynamic/requirements/requirements-py37.txt, traitlets
-ipython==7.10.1           # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel
+ipykernel==5.1.3          # via -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, ipywidgets, jupyter, jupyter-console, notebook, qtconsole
+ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
+ipython==7.10.1           # via ipykernel, ipywidgets, jupyter-console
+ipywidgets==7.5.1         # via -r ZeMA-machine-learning-tutorials/requirements.txt, jupyter
+isort==4.3.21             # via pylint
 itsdangerous==1.1.0       # via flask
-jedi==0.15.1              # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+jedi==0.15.1              # via ipython
 jeepney==0.4.3            # via keyring, secretstorage
-jinja2==2.11.2            # via flask
+jinja2==2.11.2            # via flask, nbconvert, notebook
 joblib==0.15.1            # via scikit-learn
-jupyter-client==5.3.4     # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel
-jupyter-core==4.6.1       # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client
+jsonschema==3.2.0         # via nbformat
+jupyter-client==5.3.4     # via ipykernel, jupyter-console, notebook, qtconsole
+jupyter-console==6.1.0    # via jupyter
+jupyter-core==4.6.1       # via jupyter-client, nbconvert, nbformat, notebook, qtconsole
+jupyter==1.0.0            # via -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
 keyring==21.2.1           # via twine
-kiwisolver==1.1.0         # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
+kiwisolver==1.1.0         # via matplotlib
+lazy-object-proxy==1.4.3  # via astroid
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.1.2         # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, scikit-multiflow
+matplotlib==3.1.0         # via -r PyDynamic/requirements/requirements.in, -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof, pydynamic, scikit-multiflow, seaborn
+mccabe==0.6.1             # via pylint
+mistune==0.8.4            # via nbconvert
 more-itertools==8.3.0     # via pytest
-mpmath==1.1.0             # via -r PyDynamic/requirements/requirements-py37.txt, sympy
-networkx==2.4             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
-numpy==1.17.4             # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
-osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
+multiprocess==0.70.10     # via -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
+nbconvert==5.6.1          # via jupyter, notebook
+nbformat==5.0.7           # via ipywidgets, nbconvert, notebook
+networkx==2.4             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof
+notebook==6.0.3           # via -r PyDynamic/requirements/requirements.in, jupyter, widgetsnbextension
+numpy==1.17.4             # via -r PyDynamic/requirements/requirements.in, -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, -r agentMET4FOF_ml/requirements.txt, agentmet4fof, h5py, matplotlib, pandas, patsy, pydynamic, scikit-learn, scikit-multiflow, scipy, seaborn, statsmodels, torch, torchvision
+osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof
 packaging==20.4           # via bleach, pytest, tox
-pandas==0.25.3            # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, scikit-multiflow
-parso==0.5.1              # via -r PyDynamic/requirements/requirements-py37.txt, jedi
-pexpect==4.7.0            # via -r PyDynamic/requirements/requirements-py37.txt, ipython
-pickleshare==0.7.5        # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+pandas==0.25.3            # via -r PyDynamic/requirements/requirements.in, -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof, pydynamic, scikit-multiflow, seaborn, statsmodels
+pandocfilters==1.4.2      # via nbconvert
+parso==0.5.1              # via jedi
+patsy==0.5.1              # via statsmodels
+pexpect==4.7.0            # via ipython
+pickleshare==0.7.5        # via ipython
 pillow==7.1.2             # via torchvision
 pkginfo==1.5.0.1          # via twine
-plotly==4.8.1             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, dash
+plotly==4.8.1             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof, dash
 pluggy==0.13.1            # via pytest, tox
-prompt-toolkit==3.0.2     # via -r PyDynamic/requirements/requirements-py37.txt, ipython
-ptyprocess==0.6.0         # via -r PyDynamic/requirements/requirements-py37.txt, pexpect
+prometheus-client==0.8.0  # via notebook
+prompt-toolkit==3.0.2     # via ipython, jupyter-console
+ptyprocess==0.6.0         # via pexpect, terminado
 py==1.8.1                 # via pytest, tox
 pycparser==2.20           # via cffi
-pygments==2.5.2           # via -r PyDynamic/requirements/requirements-py37.txt, ipython, readme-renderer
-pyparsing==2.4.5          # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib, packaging
+pydynamic==1.4.2          # via -r ZeMA-machine-learning-tutorials/requirements.txt
+pygments==2.5.2           # via ipython, jupyter-console, nbconvert, qtconsole, readme-renderer
+pylint==2.5.3             # via -r PyDynamic/requirements/dev-requirements.in
+pyparsing==2.4.5          # via matplotlib, packaging
 pyro4==4.80               # via osbrain
+pyrsistent==0.16.0        # via jsonschema
 pytest-cov==2.9.0         # via -r PyDynamic/requirements/dev-requirements.in
 pytest==5.4.3             # via -r PyDynamic/requirements/dev-requirements.in, pytest-cov
-python-dateutil==2.8.1    # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client, matplotlib, pandas
+python-dateutil==2.8.1    # via jupyter-client, matplotlib, pandas
 python-gitlab==1.15.0     # via python-semantic-release
 python-semantic-release==7.1.1  # via -r PyDynamic/requirements/dev-requirements.in
-pytz==2019.3              # via -r PyDynamic/requirements/requirements-py37.txt, pandas
-pyzmq==18.1.1             # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client, osbrain
+pytz==2019.3              # via pandas
+pyzmq==18.1.1             # via jupyter-client, notebook, osbrain, qtconsole
+qtconsole==4.7.4          # via jupyter
+qtpy==1.9.0               # via qtconsole
 readme-renderer==26.0     # via twine
 requests-toolbelt==0.9.1  # via twine
-requests==2.23.0          # via python-gitlab, python-semantic-release, requests-toolbelt, twine
+requests==2.23.0          # via -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, python-gitlab, python-semantic-release, requests-toolbelt, twine
 retrying==1.3.3           # via plotly
-scikit-learn==0.23.1      # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, scikit-multiflow
-scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
-scipy==1.3.3              # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, scikit-learn, scikit-multiflow
+rope==0.17.0              # via -r PyDynamic/requirements/dev-requirements.in
+scikit-learn==0.23.1      # via -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, agentmet4fof, scikit-multiflow
+scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_ml/requirements.txt
+scipy==1.3.3              # via -r PyDynamic/requirements/requirements.in, -r ZeMA-machine-learning-tutorials/requirements.txt, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, pydynamic, scikit-learn, scikit-multiflow, seaborn, statsmodels
+seaborn==0.10.1           # via -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
 secretstorage==3.1.2      # via keyring
 semver==2.10.1            # via python-semantic-release
+send2trash==1.5.0         # via notebook
 serpent==1.30.2           # via pyro4
-six==1.13.0               # via -r PyDynamic/requirements/requirements-py37.txt, bleach, cryptography, cycler, h5py, packaging, plotly, python-dateutil, python-gitlab, readme-renderer, retrying, tox, traitlets, virtualenv
+six==1.13.0               # via astroid, bleach, cryptography, cycler, h5py, jsonschema, packaging, patsy, plotly, pyrsistent, python-dateutil, python-gitlab, readme-renderer, retrying, tox, traitlets, virtualenv
 smmap==3.0.4              # via gitdb
 sortedcontainers==2.2.2   # via hypothesis, scikit-multiflow
-sympy==1.4                # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in
+statsmodels==0.11.1       # via -r ZeMA-machine-learning-tutorials/requirements.txt
+terminado==0.8.3          # via notebook
+testpath==0.4.4           # via nbconvert
 threadpoolctl==2.1.0      # via scikit-learn
-toml==0.10.0              # via python-semantic-release, tox
-torch==1.5.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, torchvision
+toml==0.10.0              # via pylint, python-semantic-release, tox
+torch==1.5.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, -r agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt, torchvision
 torchvision==0.6.0        # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
-tornado==6.0.3            # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel, jupyter-client
+tornado==6.0.3            # via ipykernel, jupyter-client, notebook, terminado
 tox==3.14.3               # via -r PyDynamic/requirements/dev-requirements.in
 tqdm==4.46.1              # via twine
-traitlets==4.3.3          # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel, ipython, jupyter-client, jupyter-core
+traitlets==4.3.3          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, qtconsole
 twine==3.1.1              # via python-semantic-release
 urllib3==1.25.9           # via requests
 virtualenv==20.0.21       # via tox
-wcwidth==0.1.7            # via -r PyDynamic/requirements/requirements-py37.txt, prompt-toolkit, pytest
+wcwidth==0.1.7            # via prompt-toolkit, pytest
 webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via flask
 wheel==0.34.2             # via python-semantic-release
+widgetsnbextension==3.5.1  # via ipywidgets
+wrapt==1.12.1             # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
